istio-configs-example/Random_Example/VirtualService.yaml
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: helloworld
spec:
  hosts:
    - '*' # Copy the value in the Gateway hosts
  gateways:
    - helloworld/helloworld-gateway # Gateway Name
  http:
    - route:
        - destination:
            host: helloworld # The Service DNS name
            subset: safe # The name defined in the DestinationRule
          weight: 33
        - destination:
            host: helloworld # The Service DNS name
            subset: risky # The name defined in the DestinationRule
          weight: 33
        - destination:
            host: helloworld # The Service DNS name
            subset: timeout # The name defined in the DestinationRule
          weight: 34
